<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.easy_voting.Main2Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginTop="25dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/collegeid"
                    android:textColor="@color/colorAccent"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/Firstname"
                    android:textColor="@color/colorAccent"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginTop="25dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/Lastname"
                    android:textColor="@color/colorAccent"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginTop="25dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/number"
                    android:textColor="@color/colorAccent"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginTop="25dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/mail"
                    android:textColor="@color/colorAccent"
                    android:textSize="15dp" />





                <EditText
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginTop="25dp"
                    android:gravity="center_horizontal"
                    android:hint="Password"
                    android:inputType="textPassword" />
                <EditText
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginTop="25dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/repassword"
                    android:inputType="textPassword" />


                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/signup" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
